--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,17 +10,20 @@ body {
     padding: 0;
 }
 
-.navbar{
+nav{
     background-color: $primary-color;
     width: 100%;
-    height: 300px;
+    height: 100px;
 }
 
 main{
     background-color: $primary-color;
+    width: 100%;
+    height: 100%;
+
 }
 
-.footer{
+footer{
     $background: #DC7E00;
     background-color: $background;
     width: 100%;
